--- a/ElectionCalculator/ElectionCalculatorService/ElectionCalculatorService.csproj
+++ b/ElectionCalculator/ElectionCalculatorService/ElectionCalculatorService.csproj
@@ -8,10 +8,11 @@
     <OutputType>Exe</OutputType>
     <RootNamespace>ElectionCalculatorService</RootNamespace>
     <AssemblyName>ElectionCalculatorService</AssemblyName>
-    <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
     <Deterministic>true</Deterministic>
+    <TargetFrameworkProfile />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <PlatformTarget>AnyCPU</PlatformTarget>
@@ -42,7 +43,7 @@
     <Compile Include="Models\Candidate.cs" />
     <Compile Include="Models\Candidates.cs" />
     <Compile Include="Models\RootObject.cs" />
-    <Compile Include="Models\Vote.cs" />
+    <Compile Include="Program.cs" />
     <Compile Include="ResultBusiness.cs" />
     <Compile Include="VoteBusiness.cs" />
   </ItemGroup>
@@ -86,6 +87,12 @@
   </ItemGroup>
   <ItemGroup>
     <WCFMetadata Include="Connected Services\" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\ElectionCalculatorDataAccess\ElectionCalculatorDataAccess.csproj">
+      <Project>{e5666250-88f8-486e-aac5-e0d893bec556}</Project>
+      <Name>ElectionCalculatorDataAccess</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
