--- a/ElectionCalculator/ElectionCalculatorView/ElectionCalculatorView.csproj
+++ b/ElectionCalculator/ElectionCalculatorView/ElectionCalculatorView.csproj
@@ -44,6 +44,9 @@
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Data" />
+    <Reference Include="System.Windows.Controls.DataVisualization.Toolkit, Version=4.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\System.Windows.Controls.DataVisualization.Toolkit.4.0.0.0\lib\net40-Client\System.Windows.Controls.DataVisualization.Toolkit.dll</HintPath>
+    </Reference>
     <Reference Include="System.Xml" />
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="System.Core" />
@@ -64,6 +67,7 @@
     </ApplicationDefinition>
     <Compile Include="Base\LogoutViewModel.cs" />
     <Compile Include="Base\NotifyPropertyViewModel.cs" />
+    <Compile Include="Helpers\PeselValidator.cs" />
     <Compile Include="Model\CandidateModel.cs" />
     <Compile Include="ViewModel\ElectionViewModel.cs" />
     <Compile Include="ViewModel\GraphViewModel.cs" />
