--- a/ElectionCalculator/ElectionCalculatorView/packages.config
+++ b/ElectionCalculator/ElectionCalculatorView/packages.config
@@ -2,4 +2,5 @@
 <packages>
   <package id="JSON" version="1.0.1" targetFramework="net461" />
   <package id="Newtonsoft.Json" version="11.0.2" targetFramework="net461" />
+  <package id="System.Windows.Controls.DataVisualization.Toolkit" version="4.0.0.0" targetFramework="net472" />
 </packages>
