--- a/ElectionCalculator/ElectionCalculatorView/packages.config
+++ b/ElectionCalculator/ElectionCalculatorView/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="iTextSharp" version="5.5.13" targetFramework="net472" />
   <package id="JSON" version="1.0.1" targetFramework="net461" />
   <package id="Newtonsoft.Json" version="11.0.2" targetFramework="net461" />
   <package id="System.Windows.Controls.DataVisualization.Toolkit" version="4.0.0.0" targetFramework="net472" />
