--- a/ElectionCalculator/ElectionCalculatorView/ElectionCalculatorView.csproj
+++ b/ElectionCalculator/ElectionCalculatorView/ElectionCalculatorView.csproj
@@ -89,6 +89,11 @@
     <Compile Include="Base\LogoutViewModel.cs" />
     <Compile Include="Base\NotifyPropertyViewModel.cs" />
     <Compile Include="Helpers\PeselValidator.cs" />
+    <Compile Include="Resource\Language.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>Language.resx</DependentUpon>
+    </Compile>
     <Compile Include="Model\CandidateModel.cs" />
     <Compile Include="ViewModel\ElectionViewModel.cs" />
     <Compile Include="ViewModel\GraphViewModel.cs" />
@@ -152,6 +157,10 @@
       <DependentUpon>Settings.settings</DependentUpon>
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
     </Compile>
+    <EmbeddedResource Include="Resource\Language.resx">
+      <Generator>PublicResXFileCodeGenerator</Generator>
+      <LastGenOutput>Language.Designer.cs</LastGenOutput>
+    </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
