--- a/ElectionCalculator/ElectionCalculatorDataAccess/ElectionCalculatorDataAccess.csproj
+++ b/ElectionCalculator/ElectionCalculatorDataAccess/ElectionCalculatorDataAccess.csproj
@@ -56,6 +56,7 @@
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.ComponentModel.DataAnnotations" />
+    <Reference Include="System.Configuration" />
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="Migrations\201809301303245_AddVotes.resx">
